--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "developers-portfolio",
   "description": "A personal static website/portfolio template hosted with GitHub Pages, built to showcase my recent projects.",
-  "homepage": "http://hashirshoaeb.com",
+  "homepage": "https://oaoni.github.io",
   "version": "1.0.0",
   "private": true,
   "author": {
-    "name": "Hashir Shoaib",
-    "email": "hashirshoaeb@gmail.com",
-    "url": "https://github.com/hashirshoaeb"
+    "name": "Ola Oni",
+    "email": "oa.oni7@gmail.com",
+    "url": "https://github.com/oaoni"
   },
   "dependencies": {
     "@popperjs/core": "^2.1.1",
